log
Thu Mar 25 01:06:38 UTC 2021: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:9: error: ‘List {aka struct List}’ has no member named ‘next’
   lista -> next = NULL;
         ^~
list.c:34:9: error: ‘List {aka struct List}’ has no member named ‘prev’
   lista -> prev = NULL;
         ^~
Compilation failed
Thu Mar 25 01:06:50 UTC 2021: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:9: error: ‘List {aka struct List}’ has no member named ‘next’
   lista -> next = NULL;
         ^~
list.c:34:9: error: ‘List {aka struct List}’ has no member named ‘prev’
   lista -> prev = NULL;
         ^~
Compilation failed
Thu Mar 25 01:06:54 UTC 2021: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:9: error: ‘List {aka struct List}’ has no member named ‘next’
   lista -> next = NULL;
         ^~
list.c:34:9: error: ‘List {aka struct List}’ has no member named ‘prev’
   lista -> prev = NULL;
         ^~
Compilation failed
Thu Mar 25 01:07:32 UTC 2021: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a6fbff6
Thu Mar 25 01:11:10 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8a23007
Thu Mar 25 01:14:52 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a3b0d02
Thu Mar 25 01:21:35 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
39eeec0
Thu Mar 25 01:25:02 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
298a908
Thu Mar 25 01:26:20 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
1808544
Thu Mar 25 01:26:35 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
29ac00d
Thu Mar 25 01:28:05 UTC 2021: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
1ca6427
Thu Mar 25 01:30:23 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c69e024
Thu Mar 25 01:31:19 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
0eab7ff
Thu Mar 25 01:32:37 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
b3d0c5a
Thu Mar 25 01:32:48 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
3d4a868
Thu Mar 25 01:33:36 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
5ba35bf
Thu Mar 25 01:34:04 UTC 2021: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
80a31a9
Thu Mar 25 01:46:53 UTC 2021: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 35/70
c9fc1b6
Thu Mar 25 01:47:28 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
ffac006
Thu Mar 25 01:51:16 UTC 2021: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
2427799
Thu Mar 25 01:57:40 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
008e2b9
Thu Mar 25 02:00:48 UTC 2021: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
8eea604
Thu Mar 25 23:59:18 UTC 2021: 
 list.c | 32 ++++++++++++++++++++++++++++++++
 1 file changed, 32 insertions(+)
 tests:  10|2
total_score: 45/70
10e66a6
Fri Mar 26 00:05:00 UTC 2021: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
67991c4
Fri Mar 26 00:07:24 UTC 2021: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
b25e332
Fri Mar 26 00:09:37 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
fdb1d33
Fri Mar 26 00:13:43 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
89121bf
Fri Mar 26 00:16:02 UTC 2021: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
9729e3f
Fri Mar 26 00:16:22 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
dc7afab
Fri Mar 26 00:16:57 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
6989ee5
Fri Mar 26 00:24:18 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
645a8ce
Fri Mar 26 00:35:45 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
ce65655
Fri Mar 26 00:42:12 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1db402e
Fri Mar 26 00:42:56 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
0adc217
Fri Mar 26 01:30:33 UTC 2021: 
 list.c | 31 +++++++------------------------
 1 file changed, 7 insertions(+), 24 deletions(-)
 tests:  10|2
total_score: 45/70
219a7d9
Fri Mar 26 01:35:03 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
540c0cd
Fri Mar 26 01:38:54 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
bed4629
Fri Mar 26 01:40:48 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
6ca8109
Fri Mar 26 02:16:28 UTC 2021: 
 list.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  11|1
total_score: 55/70
aea0fa1
Fri Mar 26 02:16:56 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
b9f5018
Fri Mar 26 19:54:01 UTC 2021: 
 list.c | 17 +++++++++--------
 1 file changed, 9 insertions(+), 8 deletions(-)
 tests:  11|1
total_score: 55/70
6890f29
Fri Mar 26 19:54:57 UTC 2021: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
a95855e
Mon Mar 29 02:17:12 UTC 2021: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  12|0
total_score: 70/70
9f14993
Mon Mar 29 19:13:48 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|0
total_score: 70/70
7bca940
Thu Apr  1 02:10:20 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
75ca3d7
Thu Apr  1 02:10:50 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
5c9bf8f
Thu Apr  1 02:11:22 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d634ee7
Thu Apr  1 02:14:59 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
0b1d62d
Thu Apr  1 02:39:58 UTC 2021: 
 list.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
a348ce3
Thu Apr  1 02:40:29 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|0
total_score: 70/70
1d81f47
Thu Apr  1 02:51:38 UTC 2021: 
 list.c | 21 +++++++++++++++++----
 1 file changed, 17 insertions(+), 4 deletions(-)
 tests:  12|0
total_score: 70/70
c684b43
